2011-12-25  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: If an MP4 file contains chapters encoded in a
	different charset than UTF-8 and --chapter-charset is not used
	then the error message shown is a lot clearer why mkvmerge aborts
	muxing. Before the error message was a generic
	"mm_text_io_c::read_next_char(): invalid UTF-8 character. The
	first byte:..."

	* mkvmerge: bug fix: MPEG program streams in which a track
	suddenly ends and others continue or in which a track has huge
	gaps will no longer cause mkvmerge to try to read the whole file
	at once. This could lead to excessive swapping and finally
	mkvmerge crashing if no more memory was available.

2011-12-24  Moritz Bunkus  <moritz@bunkus.org>

	* mkvextract: bug fix: The track IDs used for extraction are
	consistent again with the IDs that mkvmerge's identification
	reports. Fix for bug 689.

2011-12-21  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fix compilation if FLAC is not available. Fix
	for issue #13.

2011-12-18  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.2.0.

	* mkvmerge, mmg: bug fix: Automatic MIME type recognition for
	TrueType fonts will result in "application/x-truetype-font" again
	instead of "application/x-font-ttf". Fix for bug 682.

2011-12-14  Andriy Bilous'ko  <arestarh@ukr.net>

	* documentation: enhancement: Added a Ukrainian translation for
	mkvextract's man page.

2011-12-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvinfo: bug fix: Various elements used to have a space between
	their names and their value's hex dump. In v5.1.0 that space was
	accentally removed. It has been added again. Fix for bug 583.

2011-12-12  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Turn off input file buffering for badly
	interleaved MP4 files.

2011-12-11  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Changed how mkvmerge assigns IDs to tracks in
	source files for Matroska and MP4 files. That way files whose