@@ -25,7 +25,6 @@ m4_include(ac/precompiled_headers.m4)
 m4_include(ac/build_timestamp_in_version.m4)
 m4_include(ac/inttypes.m4)
 m4_include(ac/pri64d.m4)
-m4_include(ac/posix_fadvise.m4)
 m4_include(ac/iconv.m4)
 m4_include(ac/nl_langinfo.m4)
 m4_include(ac/ogg.m4)
